tests/compile-fail/integration__integration__timelines__duplicate.snap
---
source: tests/integration/timelines.rs
expression: stderr
---
error: duplicate timeline for index 0
  ┌─ <input>:4:8
  │
3 │ script 0 foo { ins_10(100); }
  │        - previously defined here
4 │ script 0 bar { ins_10(200); }
  │        ^ redefined here


